tests/ui/try-block/try-block-type-error.stderr
error[E0271]: type mismatch resolving `<Option<f32> as Try>::Output == {integer}`
  --> $DIR/try-block-type-error.rs:10:9
   |
LL |         42
   |         ^^ expected integer, found `f32`

error[E0271]: type mismatch resolving `<Option<i32> as Try>::Output == ()`
  --> $DIR/try-block-type-error.rs:16:5
   |
LL |     };
   |     ^ expected `()`, found `i32`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
